envoy/target_service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: target
  namespace: default
spec:
  ports:
  - port: 80
    nodePort: 32123
    protocol: TCP
  selector:
    app: target
  sessionAffinity: None
  type: LoadBalancer
